# transformation-engine/src/routes/index.ts
@@ -6,5 +6,6 @@ const router = Router();
 router.post('/jobs/search', Controller.searchJobs);
 router.get('/jobs/:jobId', Controller.getJob);
 router.post('/jobs/:jobId/apply', Controller.applyToJob);
+router.get('/jobs/applications/:jobId/:applicationId/status', Controller.getJobApplications);
 
 export { router };
